traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: ')' expected but ';' found.
      writeMessage(i + j * (i + 1);
                                  ^