traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  for(i <- 0 to getWorldWidth() - 1) {
    for(j <- 0 to getWorldHeight() - 1) {
      setPos(i, j);
      writeMessage(i + j * (i + 1);
    }
  }
}

def isEndOfWorld():Boolean = {
  if(getX() == getWorldWidth() - 1 && getY() == getWorldHeight() - 1) {
    return true;
  }
  
  return false;
}